2006-02-19  Per Bothner  <per@bothner.com>

	* Member.java: New interface.
	* Makefile.am: Update coordingly.
	* Field.java: Implements Member.
	* Method.java: Implement Member.

2006-02-01  Per Bothner  <per@bothner.com>

	* ListCodeSize.java: New utility application class.
	* Makefile.am: Update accordingly.
	* Method.java (listParameters): New method.
	(toString): Use listParameters.

	* ArrayClassLoader.java: Remove unneeded import.

2006-01-24  Per Bothner  <per@bothner.com>

	* ClassType.java (getDeclaredMethod): If arg_types[i] is null,
	match any parameter type.
	(getMethod): Don't check that method is public; let caller
	check that method is accessible.

2005-12-31  Per Bothner  <per@bothner.com>

	* ObjectType.java (getReflectClass): Un-tab-ify conditional text.

2005-12-11  Per Bothner  <per@bothner.com>

	* ArrayClassLoader.java (context): New field.
	(getResourceContext, setResourceContext, findResource): New methods.

2005-11-23  Per Bothner  <per@bothner.com>

	* ClassType.java (getOuterLinkType): New method.
	(setOuterLink): Change to return link Field instead of void.

2005-11-22  Per Bothner  <per@bothner.com>

	* ClassType.java (getField): New method, takes mask.
	(getField): Old method now just calls new method.
	(addFields): Now add all fields, not just public|protected ones.
	(addmethods): Likewise.
	(getMethod): Only match public methods.

	* ClassType.java (addMethod): Reimplement using shared code.

2005-11-21  Per Bothner  <per@bothner.com>

	* ObjectType.java (HAS_OUTER_LINK): New flag,
	* ClassType.java (hasOuterLink, setOuterLink): New methods.
	(addField): Set HAS_OUTER_LINK if "this$0" field seen.
	(getDeclaredMethod): Adjust if hasOuterLink().
	* Method.java (signature): Make non-private so ClassType can clear it.

2005-11-16  Per Bothner  <per@bothner.com>

	* ClassType.java (getPackageName): Fix thinko.

2005-11-14  Per Bothner  <per@bothner.com>

	* ClassType.java (getMethod): Also search implemented interfaces.
