@@ -1,3 +1,9 @@
+2006-02-19  thomas kirk  <tk@research.att.com>
+	    Per Bothner  <per@bothner.com>
+
+	* ZipLoader.java (loadAllClasses): Return first class
+	in archive (i.e. the main class).
+
 2006-02-19  Per Bothner  <per@bothner.com>
 
 	* Member.java: New interface.
